# aws-audit-tool

./: .gitignore  README.md  cloudmapper_job.py  config.py  excel_report.py  inventory.py  main.py  pyproject.toml  requirements.txt  runner.py  s3_io.py
bot/: aws_actions.py  config.py  gui.py  main_bot.py  styles.py
scripts/: ec2_run_cloudmapper.sh
src/: cli.py  cloudmapper_job.py  runner.py  s3_io.py
