[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aws-audit-tool"
version = "0.1.0"
description = "Personal AWS audit and inventory tool"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
aws-audit = "aws_audit_tool.cli:main"
